objects/ChatInquiryType__mdt.object
<CustomObject>
    <fields>
        <fullName>AuthenticatedUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authenticated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrandName__c</fullName>
        <label>Brand Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Axos</fullName>
                </value>
                <value>
                    <fullName>BankX</fullName>
                </value>
                <value>
                    <fullName>BofiFed</fullName>
                </value>
                <value>
                    <fullName>BofiUSA</fullName>
                </value>
                <value>
                    <fullName>ConsumerDirect</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>Netbank</fullName>
                </value>
                <value>
                    <fullName>UFB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BuisinessUnit__c</fullName>
        <label>Buisiness Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>UDB</fullName>
                </value>
                <value>
                    <fullName>SFR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ButtonToRoute__c</fullName>
        <label>Button to Route</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor_Button</fullName>
                </value>
                <value>
                    <fullName>Advisor_Consumer_Deposits_Button</fullName>
                </value>
                <value>
                    <fullName>Axos_Button</fullName>
                </value>
                <value>
                    <fullName>Axos_Button_Enrollment</fullName>
                </value>
                <value>
                    <fullName>Axos_Button_Enrollment_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Axos_Button_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Axos_Button_LS</fullName>
                </value>
                <value>
                    <fullName>Axos_Button_UDB</fullName>
                </value>
                <value>
                    <fullName>Bank_X_Button</fullName>
                </value>
                <value>
                    <fullName>Bank_X_Button_Enrollment</fullName>
                </value>
                <value>
                    <fullName>Bank_X_Button_Enrollment_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Bank_X_Button_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Bank_X_Button_LS</fullName>
                </value>
                <value>
                    <fullName>Bofi_Fed_Button</fullName>
                </value>
                <value>
                    <fullName>Bofi_USA_Button</fullName>
                </value>
                <value>
                    <fullName>Bofi_USA_Button_LS</fullName>
                </value>
                <value>
                    <fullName>Bofi_USA_Button_UDB</fullName>
                </value>
                <value>
                    <fullName>BofiUSA_Button_Enrollment</fullName>
                </value>
                <value>
                    <fullName>BofiUSA_Button_Enrollment_Logged_In</fullName>
                </value>
                <value>
                    <fullName>BofiUSA_Button_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Consumer_Direct_Button</fullName>
                </value>
                <value>
                    <fullName>Nationwide_Button</fullName>
                </value>
                <value>
                    <fullName>Nationwide_Button_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Nationwide_Button_LS</fullName>
                </value>
                <value>
                    <fullName>Nationwide_Button_UDB</fullName>
                </value>
                <value>
                    <fullName>Netbank_Button</fullName>
                </value>
                <value>
                    <fullName>Netbank_Button_Enrollment</fullName>
                </value>
                <value>
                    <fullName>Netbank_Button_Enrollment_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Netbank_Button_Logged_In</fullName>
                </value>
                <value>
                    <fullName>Netbank_Button_LS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InquiryTypeLabel__c</fullName>
        <label>Inquiry Type Label</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Other New Account Inquiries</fullName>
                </value>
                <value>
                    <fullName>Checking, Savings, or other deposit accounts</fullName>
                </value>
                <value>
                    <fullName>Existing Mortgage, Auto or other loans</fullName>
                </value>
                <value>
                    <fullName>New Online Banking Help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Chat Inquiry Type</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BuisinessUnit__c</columns>
        <columns>BrandName__c</columns>
        <columns>ButtonToRoute__c</columns>
        <columns>AuthenticatedUser__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>Nationwide</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BuisinessUnit__c</columns>
        <columns>BrandName__c</columns>
        <columns>ButtonToRoute__c</columns>
        <columns>AuthenticatedUser__c</columns>
        <columns>InquiryTypeLabel__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BrandName__c</field>
            <operation>equals</operation>
            <value>Nationwide</value>
        </filters>
        <label>Nationwide</label>
    </listViews>
    <listViews>
        <fullName>UDB_Axos</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>InquiryTypeLabel__c</columns>
        <columns>BuisinessUnit__c</columns>
        <columns>BrandName__c</columns>
        <columns>ButtonToRoute__c</columns>
        <columns>AuthenticatedUser__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BrandName__c</field>
            <operation>equals</operation>
            <value>Axos</value>
        </filters>
        <filters>
            <field>BuisinessUnit__c</field>
            <operation>equals</operation>
            <value>UDB</value>
        </filters>
        <label>UDB Axos</label>
    </listViews>
    <listViews>
        <fullName>UDB_Bank_X</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>InquiryTypeLabel__c</columns>
        <columns>BuisinessUnit__c</columns>
        <columns>BrandName__c</columns>
        <columns>ButtonToRoute__c</columns>
        <columns>AuthenticatedUser__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BrandName__c</field>
            <operation>equals</operation>
            <value>BankX</value>
        </filters>
        <filters>
            <field>BuisinessUnit__c</field>
            <operation>equals</operation>
            <value>UDB</value>
        </filters>
        <label>UDB Bank X</label>
    </listViews>
    <listViews>
        <fullName>UDB_BofiUSA</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BuisinessUnit__c</columns>
        <columns>BrandName__c</columns>
        <columns>ButtonToRoute__c</columns>
        <columns>AuthenticatedUser__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BuisinessUnit__c</field>
            <operation>equals</operation>
            <value>UDB</value>
        </filters>
        <filters>
            <field>BrandName__c</field>
            <operation>equals</operation>
            <value>BofiUSA</value>
        </filters>
        <label>UDB BofiUSA</label>
    </listViews>
    <listViews>
        <fullName>UDB_Netbank</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BuisinessUnit__c</columns>
        <columns>BrandName__c</columns>
        <columns>ButtonToRoute__c</columns>
        <columns>AuthenticatedUser__c</columns>
        <columns>DisplayOrder__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BuisinessUnit__c</field>
            <operation>equals</operation>
            <value>UDB</value>
        </filters>
        <filters>
            <field>BrandName__c</field>
            <operation>equals</operation>
            <value>Netbank</value>
        </filters>
        <label>UDB Netbank</label>
    </listViews>
    <pluralLabel>Chat Inquiry Types</pluralLabel>
</CustomObject>